--- a/ressources/css/scribble.css
+++ b/ressources/css/scribble.css
@@ -231,7 +231,7 @@ canvas#canvas {
 #cbox4{
 	width: 40px;
 	height: 40px;
-	background-color: FFFF00;
+	background-color: #FFFF00;
 	float: left;
 }
 
@@ -246,7 +246,7 @@ canvas#canvas {
 #cbox5{
 	width: 40px;
 	height: 40px;
-	background-color: FF00FF;
+	background-color: #FF00FF;
 	float: left;
 }
 
