--- a/ressources/css/scribble.css
+++ b/ressources/css/scribble.css
@@ -74,6 +74,13 @@ div#show {
 	background-color: #6f6;
 	float: left;
 }
+div#closescribble {
+	width: 7em;
+	padding: 1px;
+	text-align: center;
+	background-color: #f00;
+	float: left;
+}
 
 canvas#canvas {
 	width: 960px;
